Buildfix after r178434 https://bugs.webkit.org/show_bug.cgi?id=140467

Reviewed by Chris Dumez.

* css/StyleBuilderConverter.h:
(WebCore::StyleBuilderConverter::convertPerspective):

Canonical link: https://commits.webkit.org/158448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178454 268f45cc-cd09-0410-ab3c-d52691b4dbfc